// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with image 1`] = `
<DocumentFragment>
  <div
    class="CompanyCard"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <a
          href="/companies/test-0"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h5
                class="card-title"
              >
                Test Company
              </h5>
              <p
                class="card-text"
              />
            </div>
            <div
              class="col-2 col"
              id="CompanyCard-img"
            >
              <img
                alt="Test Company"
                class="card-img"
                src="dummyUrl.jpg"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot without image 1`] = `
<DocumentFragment>
  <div
    class="CompanyCard"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <a
          href="/companies/test-0"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h5
                class="card-title"
              >
                Test Company
              </h5>
              <p
                class="card-text"
              />
            </div>
            <div
              class="col-2 col"
              id="CompanyCard-img"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
